# SSW.Products

./: .env.example  .eslintrc.json  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.claude/: settings.local.json
.github/: temp-changes.json  temp-filtered.json  temp-generated.json  temp-translations.json  translation-config.json
.github/scripts/: create-pr.js  detect-changes.js  detect-files.js  filter-files.js  (+7 more)
__tests__/: FaqAnchor.test.tsx  FeaturesAnchor.test.tsx  LinkableHeading.test.tsx  anchorSlug.test.ts  docAndBlogMarkdownStyle.test.tsx  localeFromBreadcrumbs.test.ts  middleware.ts  pageAnchorUniqueness.test.ts  resolveRequestRoute.test.ts  youtube.ts
actions/: getBlogs.ts
app/: client-fallback-page.tsx  globals.css  tina-api.client.ts
components/: AuthorInfo.tsx  BlogCard.tsx  Collapsible.tsx  Container.tsx  GoogleStructuredDataScript.tsx  GrowingLink.tsx  Input.tsx  OutlineBox.tsx  StackedContainer.tsx  TableOfContents.tsx  Tags.tsx  shiny-button.tsx
scripts/: README.md  createIndices.ts
scripts/seo_generator/: pyproject.toml  seo_description_filler.py
scripts/seo_generator/utils/: excel.py  http.py  language.py  markdown.py  urls.py
tina/: config.ts  tina-lock.json
utils/: anchorSlug.ts  assetVersion.ts  blogUrl.ts  contextualLink.ts  environment.ts  extractBlurbAsTinaMarkdownContent.ts  fetchBlogs.ts  fetchDocs.ts  githubMetadata.tsx  i18n.ts  localeFromBreadcrumbs.ts  resolveRequestRoute.ts  setPageMetaData.tsx  sitemap.ts  timeUtils.ts  tina.ts
(+394 files in other folders)
